overflow:hidden on the dropdown div to prevent scroll bars from showing up

--- a/jquery.geocodify.css
+++ b/jquery.geocodify.css
@@ -15,6 +15,10 @@
     overflow: scroll;
 }
 
+div.geocodify-dropdown {
+    overflow: hidden;
+}
+
 .geocodify-dropdown ul {
     margin: 0 !important;
     padding: 0 !important;
